Patch POM